fix: wrong overflow at end time

--- a/src/components/projects/detail.css
+++ b/src/components/projects/detail.css
@@ -106,4 +106,5 @@
     width: 0;
     overflow: visible;
     white-space: nowrap;
+    direction: rtl;
 }
